# volition

./: .gitattributes  .gitignore  .gitmodules  Generate-SelfCert.ps1  build.gradle  build.gradle.kts  build.gradle.old  getting-started.md  readme.md  scenicView.properties  settings.gradle  vcpkg.json.template  volition.sln
.github/workflows/: cmake-multi-platform.yml  cpp.yml  create-release.yml  dotnet.yml  gradle.yml
.kinda-nuget/: readme.md
api/: EmpowerOps.Volition.Api.csproj  EmpowerOps.Volition.Api.nuspec  UpdateVersionProperties.ps1  api.csproj  api.sln  app.config  packages.config  vcpkg.json  vcpkg.template.json  versions.properties
api/Properties/: AssemblyInfo.cs
api/src/main/csharp/: Empty.cs  Extensions.cs
api/src/main/kotlin/com/empowerops/volition/: BetterExceptionsInterceptor.kt  LoggingInterceptor.kt
api/src/main/kotlin/com/empowerops/volition/dto/: grpc-extensions.kt
api/src/main/proto/: licensor.proto  optimizer.proto
client-reference/: readme.md
client-reference/src/main/kotlin/com/empowerops/volition/ref_client/: client.kt
cpp-client-reference/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  Source.cpp  cpp-client-reference.vcxproj  cpp-client-reference.vcxproj.filters  getting-started-vs.md  optimizer.grpc.pb.cc  optimizer.grpc.pb.h  optimizer.pb.cc  optimizer.pb.h  optimizer.proto  vcpkg.json
cpp-client-reference/include/: README.md  volition.h  volition_api.h
cpp-client-reference/src/: object.hpp  volition_core.cpp  volition_core.hpp  volition_shim.cpp
cpp-client-reference/test/: test_c99.c  test_cxx11.cpp  test_cxx98.cpp
cpp-client-reference/vcpkg-triplets/: arm64-linux-release.cmake
cpp-sdk/: .clang-tidy  CMakeLists.txt
cpp-sdk/include/: volition.h
csharp-client-reference/: App.config  App.xaml  App.xaml.cs  Constraint.cs  EmpowerOps.Volition.ClientRef.csproj  EvaluationException.cs  EvaluationResult.cs  IEvaluator.cs  Input.cs  MainWindow.xaml  MainWindow.xaml.cs  Output.cs  RandomNumberEvaluator.cs  csharp-client-reference.csproj  csharp-client-reference.sln  getting-started-cs.md  packages.config
csharp-client-reference/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
gcc-client-reference/: Source.cpp  getting-started-gcc.md  optimizer.grpc.pb.h  optimizer.pb.cc  optimizer.pb.h
gradle/wrapper/: gradle-wrapper.properties
oasis-reference/: opt-ref.exe4j
oasis-reference/src/main/kotlin/com/empowerops/volition/ref_async_oasis/: reference.kt
oasis-reference/src/main/kotlin/com/empowerops/volition/ref_oasis/: ApiService.kt  ConfigurationActorFactory.kt  ConnectionView.kt  ConsoleOutput.kt  DataModelService.kt  EvaluationEngine.kt  Evaluator.kt  Events.kt  Extensions.kt  ModelService.kt  Models.kt  OptimizationActorFactory.kt  Optimizer.kt  OptimizerCLI.kt  OptimizerController.kt  OptimizerEndPoint.kt  OptimizerGUIRootController.kt  OptimizerScreen.kt  OptimizerService.kt  OptimizerService2.kt  OptimizerStateMachine.kt  OptimizerView.fxml  PluginEndPoint.kt  PluginService.kt  RandomNumberOptimizer.kt  RefOptimizer.kt  RunResources.kt  optimizer.kt
oasis-reference/src/main/kotlin/com/empowerops/volition/ref_oasis/experimental/: Evaluator.kt
oasis-reference/src/main/kotlin/com/empowerops/volition/ref_oasis/front_end/: ConnectionView.kt  ConsoleOutput.kt  OptimizationActor.kt  Optimizer.kt  OptimizerController.kt  OptimizerGUI.kt  OptimizerGUIRootController.kt  RunConfigurationOptimizer.kt
oasis-reference/src/main/kotlin/com/empowerops/volition/ref_oasis/model/: Events.kt  ModelService.kt  Models.kt  RunResources.kt
oasis-reference/src/main/kotlin/com/empowerops/volition/ref_oasis/optimizer/: ApiService.kt  EvaluationEngine.kt  ForceStopAction.kt  OptimizerEndPoint.kt  OptimizerService.kt  PauseAction.kt  RandomNumberOptimizer.kt  ResumeAction.kt  RunStateMachine.kt  StartAction.kt  StateService.kt  StopAction.kt
oasis-reference/src/main/kotlin/com/empowerops/volition/ref_oasis/optimzier_basic/: OptimizerService.kt
oasis-reference/src/main/kotlin/com/empowerops/volition/ref_oasis/optimzier_cloud/: ScalableOptimizationService.kt  ScalableRunner.kt
oasis-reference/src/main/kotlin/com/empowerops/volition/ref_oasis/plugin/: PluginService.kt
oasis-reference/src/main/resources/com.empowerops.volition.ref_oasis/: OptimizerView.fxml
oasis-reference/src/test/kotlin/com/empowerops/volition/ref_async_oasis/: OptimizerServiceAsyncFixture.kt
oasis-reference/src/test/kotlin/com/empowerops/volition/ref_oasis/: EvaluatorFixture.kt  LanguageFixture.kt  OptimizerEndpointFixture.kt  OptimizerFixture.kt  SystemTest.kt  Tests.kt
oasis-reference/src/test/kotlin/com/empowerops/volition/ref_oasis/experimental/: EvaluatorFixture.kt
oasis-reference/src/test/kotlin/com/empowerops/volition/ref_oasis/optimizer/: ForceStopActionFixture.kt  OptimizerEndpointFixture.kt  PauseActionFixture.kt  ResumeActionFixture.kt  StartActionFixture.kt  StopActionFixture.kt
oasis-reference/src/test/kotlin/com/empowerops/volition/ref_oasis/plugin/: PluginServiceFixture.kt
python-client-reference/: main.py  optimizer_pb2.py  optimizer_pb2_grpc.py  requirements.txt
vcpp-client-reference/: CMakeLists.txt  Generate-Source.ps1  README.md  Source.cpp  getting-started-vs.md  optimizer.proto  resource.h  vcpkg-renamed.json  vcpp-client-reference.aps  vcpp-client-reference.rc  vcpp-client-reference.sln  vcpp-client-reference.vcxproj  vcpp-client-reference.vcxproj.filters
